[package]
name = "steam-wishlist-solver"
version = "0.2.0"
edition = "2024"
description = "Get possible lists of games to buy with a given budget from an AugmentedSteam wishlist export."
repository = "https://github.com/trytonlux/steam-wishlist-solver"
readme = "README.md"
license-file = "LICENSE"


[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
serde = { version = "1.0" }
serde_json = "1.0"
tabled = {version = "0.21", features = ["default", "ansi"]}

[profile.release]
strip = true
lto = true
